Fixing form skill styles to align drop menu properly.

--- a/developer/static/css/developer.css
+++ b/developer/static/css/developer.css
@@ -260,7 +260,6 @@
 }
 
 .form-skill {
-    padding: 4px;
     border-radius: 4px;
     border: 1px solid #E3E3E3;
     margin-bottom: 2px;
@@ -301,11 +300,17 @@
 }
 
 .form-skill-container {
+    padding-left: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
     display: inline-block;
     vertical-align: middle;
 }
 
 .form-skill-close-container {
+    padding-top: 4px;
+    padding-bottom 4px;
+    padding-right: 4px;
     display: inline-block;
     vertical-align: middle;
 }
